<resources>
    <string name="app_name">BarQueroIngresso</string>
    <string name="txt_login">Login</string>
    <string name="btn_login_enter">Entrar</string>
    <string name="edit_login_password">Senha</string>
    <string name="edit_login_user">Usuário</string>
    <string name="message_error_login">Usuário ou senha inválido</string>
    <string name="item_list">itens</string>
    <string name="btn_send_main">Enviar</string>
    <string name="txt_product_main">Produtor escolhidos</string>
    <string name="btn_product_main">Produtos mais vendidos</string>
    <string name="edit_value_number">Valor</string>
    <string name="edit_tables_number">N° mesa</string>
</resources>