<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        tools:context=".features.login.ui.LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:src="@drawable/quero_ingresso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/txt_login"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/color_grey_darker"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_container_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/color_grey_darker"
            android:theme="@style/TextInputLayoutStyle"
            app:boxStrokeColor="@color/text_input_layout_color"
            app:hintTextColor="@color/color_light_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_login_user"
                android:inputType="text"
                android:lines="1"
                android:textColorHint="@color/color_grey_darker" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:textColorHint="@color/color_grey_darker"
            android:theme="@style/TextInputLayoutStyle"
            app:boxStrokeColor="@color/text_input_layout_color"
            app:hintTextColor="@color/color_light_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_container_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_login_password"
                android:inputType="textPassword"
                android:lines="1"
                android:textColorHint="@color/color_grey_darker" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/color_light_blue"
            android:drawableEnd="@drawable/ic_baseline_account_circle_24"
            android:padding="16dp"
            android:text="@string/btn_login_enter"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_container_login" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:indeterminateTint="@color/color_light_blue"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>