<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/img_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:contentDescription="@null"
            android:src="@drawable/quero_ingresso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/table_container_main"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:textColorHint="@color/color_grey_darker"
            android:theme="@style/TextInputLayoutStyle"
            app:boxStrokeColor="@color/text_input_layout_color"
            app:hintTextColor="@color/color_light_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/table_edit_main"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:hint="@string/edit_tables_number"
                android:inputType="number"
                android:lines="1"
                android:maxLength="3"
                android:textAlignment="center"
                android:textColorHint="@color/color_grey_darker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_main" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/value_container_main"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/color_grey_darker"
            android:theme="@style/TextInputLayoutStyle"
            app:boxStrokeColor="@color/text_input_layout_color"
            app:hintTextColor="@color/color_light_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/value_edit_main"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/edit_value_number"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="6"
                android:textAlignment="center"
                android:textColorHint="@color/color_grey_darker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_main" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_item_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            app:icon="@drawable/ic_baseline_forward_24"
            android:backgroundTint="@color/color_light_blue"
            android:paddingStart="14dp"
            android:paddingTop="16dp"
            android:paddingEnd="30dp"
            android:paddingBottom="14dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_container_main" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_product_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/color_light_blue"
            android:padding="12dp"
            android:text="@string/btn_product_main"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_item_main" />


        <TextView
            android:id="@+id/txt_product_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:text="@string/txt_product_main"
            android:textColor="@color/color_light_blue"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_product_main" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_product_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/txt_product_main" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_main"
            android:layout_width="match_parent"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="124dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/color_light_blue"
            android:padding="12dp"
            android:text="@string/btn_send_main"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_product_main" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>